--- a/index.html
+++ b/index.html
@@ -1,3 +1,12 @@
-eduardo
-teste
-teste
+<!DOCTYPE html>
+<html lang="pt-br">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>TELA CADASTRO</title>
+    </head>
+        <body>
+            <h1>TELA PRINCIPAL</h1>
+            <link rel=""
+        </body>
+</html>
