--- a/index.html
+++ b/index.html
@@ -1,12 +1,7 @@
 <!DOCTYPE html>
-<html lang="pt-br">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>TELA CADASTRO</title>
-    </head>
-        <body>
-            <h1>TELA PRINCIPAL</h1>
-            <link rel=""
-        </body>
-</html>
+<html lang="pt-br"> 
+<head>
+    <title>TELA DE CADASTRO</title>
+</head>
+<h1>INICIO</h1>
+<a href="aa.html">CADASTRO</a>
